# refterm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  faq.md  fast_pipe.h  refterm.c  refterm.h  refterm.hlsl  refterm_cs.h  refterm_example_d3d11.c  refterm_example_d3d11.h  refterm_example_dwrite.cpp  refterm_example_dwrite.h  refterm_example_glyph_generator.c  refterm_example_glyph_generator.h  refterm_example_source_buffer.c  refterm_example_source_buffer.h  refterm_example_terminal.c  refterm_example_terminal.h  refterm_glyph_cache.c  refterm_glyph_cache.h  refterm_glyph_generator.c  refterm_glyph_generator.h  refterm_ps.h  refterm_source_buffer.c  refterm_source_buffer.h  refterm_vs.h  splat.cpp  splat2.cpp
